Disable CustomDoze options that are not supported
* Due to hardware limitations, Dragon does not support some functions
  within the CustomDoze package. Let's disable them from Settings so
  we don't collect any reports from users about it.

Change-Id: I1839616fdb7110c41cce9c90f01a4acd4c10b3f8

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -208,4 +208,6 @@
         <item>"/system/framework/boot-core-libart.vdex"</item>
     </string-array>
 
+    <bool name="config_alt_ambient_display">false</bool>
+
 </resources>
